# customer_support_chatbot_Retail

./: .gitignore  Dockerfile  README.md  chatbot_experiment.ipynb  evaluate_agent.py  ingest_data.py  main.py  pyproject.toml  requirements.txt
run_tools/: ingest_data.py  main.py
src/assistant/: config.py
src/assistant/application/: generate_response.py
src/assistant/application/agents/: graph.py  nodes.py  state.py
src/assistant/application/domain/: prompts.py
src/assistant/application/evaluation/: evaluate.py
src/assistant/infrastructure/: opik_utils.py
