[project]
name = "customer-support-chatbot-retail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
